--- a/Web/Presenters/templates/@deactivated.xml
+++ b/Web/Presenters/templates/@deactivated.xml
@@ -6,5 +6,13 @@
 {/block}
 
 {block content}
-    Аккаунт выпилится {$thisUser->getDeactivatedUntil()} =))
+    <div class="msg">
+        <b>Ваша страница удалена.</b><br>
+        По возможности вы можете <a href="/settings/reactivate">восстановить её</a> до {$thisUser->getDeactivatedUntil()->format("%e %B %Y")}
+    </div>
+    <center style="background: white;border: #DEDEDE solid 1px;">
+        <span style="color: #707070;margin: 60px 0;display: block;">
+            {_profile_not_found_text}
+        </span>
+    </center>
 {/block}
