Deact.: Fixup code a lil bit

--- a/Web/Presenters/templates/@deactivated.xml
+++ b/Web/Presenters/templates/@deactivated.xml
@@ -7,7 +7,7 @@
 
 {block content}
     <div class="container_gray bottom" style="margin: -10px -10px 10px;">
-        {tr("profile_deactivated_msg", $thisUser->getDeactivatedUntil()->format("%e %B %G" . tr("time_at_sp") . "%R"))|noescape}
+        {tr("profile_deactivated_msg", $thisUser->getDeactivationDate()->format("%e %B %G" . tr("time_at_sp") . "%R"))|noescape}
     </div>
 
     <div class="left_small_block">
