Global: Make all actions in lists lowercase Also fix display of actions in My Groups Closes #590

--- a/Web/Presenters/templates/@listView.xml
+++ b/Web/Presenters/templates/@listView.xml
@@ -41,7 +41,7 @@
                                                 {include description, x => $dat}
                                             {/ifset}
                                         </td>
-                                        <td n:ifset="actions" valign="top" class="action_links" style="width: 150px; text-transform: lowercase;">
+                                        <td n:ifset="actions" valign="top" class="action_links" style="width: 150px;">
                                             {include actions, x => $dat}
                                         </td>
                                     </tr>
