--- a/Web/static/css/style.css
+++ b/Web/static/css/style.css
@@ -334,6 +334,7 @@ p {
 .action_links>.profile_link,
 .action_links>.profile_link_form>.profile_link {
     width: 150px;
+    text-transform: lowercase;
 }
 
 .profile_link.disable>a,
