--- a/Web/Presenters/templates/@MilkshakeListView.xml
+++ b/Web/Presenters/templates/@MilkshakeListView.xml
@@ -52,9 +52,9 @@
             {include actions}
             <hr/>
             <div n:if="$sorting ?? true" class="tile">
-                <a href="?C=I;O=R" class="profile_link">{_"sort_randomly"}</a>
-                <a href="?C=M;O=D" class="profile_link">{_"sort_up"}</a>
-                <a href="?C=M;O=A" class="profile_link">{_"sort_down"}</a>
+                <a href="?C=I;O=R" class="profile_link">{_sort_randomly}</a>
+                <a href="?C=M;O=D" class="profile_link">{_sort_up}</a>
+                <a href="?C=M;O=A" class="profile_link">{_sort_down}</a>
             </div>
         </div>
     </div>
