--- a/Web/Presenters/templates/@banned.xml
+++ b/Web/Presenters/templates/@banned.xml
@@ -1,13 +1,13 @@
 {extends "@layout.xml"}
-{block title}{_"banned_title"}{/block}
+{block title}{_banned_title}{/block}
 
 {block header}
-    {_"banned_header"}
+    {_banned_header}
 {/block}
 
 {block content}
     <center>
-        <img src="/assets/packages/static/openvk/img/oof.apng" alt="{_'banned_alt'}" style="width: 20%;" />
+        <img src="/assets/packages/static/openvk/img/oof.apng" alt="{_banned_alt}" style="width: 20%;" />
     </center>
     <p>
         {tr("banned_1", htmlentities($thisUser->getCanonicalName()))|noescape}<br/>
