--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -203,6 +203,39 @@
                             <a n:if="OPENVK_ROOT_CONF['openvk']['preferences']['adPoster']['enable'] && $thisUser->getLeftMenuItemStatus('poster')" href="{php echo OPENVK_ROOT_CONF['openvk']['preferences']['adPoster']['link']}" >
                                 <img src="{php echo OPENVK_ROOT_CONF['openvk']['preferences']['adPoster']['src']}" alt="{php echo OPENVK_ROOT_CONF['openvk']['preferences']['adPoster']['caption']}" class="psa-poster" style="max-width: 100%; margin-top: 10px;" />
                             </a>
+
+                            <div class="floating_sidebar">
+                                <a class="minilink" href="/friends{$thisUser->getId()}">
+                                    <object type="internal/link" n:if="$thisUser->getFollowersCount() > 0">
+                                        <div class="counter">
+                                            +{$thisUser->getFollowersCount()}
+                                        </div>
+                                    </object>
+                                    <img src="/assets/packages/static/openvk/img/friends.svg">
+                                </a>
+                                <a class="minilink" href="/albums{$thisUser->getId()}">
+                                    <img src="/assets/packages/static/openvk/img/photos.svg">
+                                </a>
+                                <a class="minilink" href="/im">
+                                    <object type="internal/link" n:if="$thisUser->getUnreadMessagesCount() > 0">
+                                        <div class="counter">
+                                            +{$thisUser->getUnreadMessagesCount()}
+                                        </div>
+                                    </object>
+                                    <img src="/assets/packages/static/openvk/img/messages.svg">
+                                </a>
+                                <a class="minilink" href="/groups{$thisUser->getId()}">
+                                    <img src="/assets/packages/static/openvk/img/groups.svg">
+                                </a>
+                                <a class="minilink" href="/notifications">
+                                    <object type="internal/link" n:if="$thisUser->getNotificationsCount() > 0">
+                                        <div class="counter">
+                                            +{$thisUser->getNotificationsCount()}
+                                        </div>
+                                    </object>
+                                    <img src="/assets/packages/static/openvk/img/feedback.svg">
+                                </a>
+                            </div>
                         {elseif !$thisUser->isActivated()}
                             <a href="/logout?hash={urlencode($csrfToken)}" class="link">{_menu_logout}</a>
                         {else}
