OpenVK Modern: fix fastmenu (#651)

--- a/themepacks/openvk_modern/stylesheet.css
+++ b/themepacks/openvk_modern/stylesheet.css
@@ -230,3 +230,21 @@ input[type=checkbox] {
 #votesBalance {
     border-bottom: none;
 }
+
+.floating_sidebar {
+    position: fixed;
+    top: 50px;
+    right: 0;
+    align-items: start;
+    width: 21%;
+}
+.minilink .counter {
+    background-color: #2B587A;
+    margin: 0;
+    padding: 0.5px 2px;
+    left: 10px;
+    font-size: 7px;
+    color: #fff;
+    position: absolute;
+    margin-top: -6px;
+}
