"Show more..." in posts (#668)
Co-authored-by: Ilya Prokopenko <dsrev@protonmail.com>

--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -325,6 +325,7 @@
         {script "js/scroll.js"}
         {script "js/al_wall.js"}
         {script "js/al_api.js"}
+        {script "js/jquery.collapser.js"}
 
         {ifset $thisUser}
             {script "js/al_notifs.js"}
