--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -186,6 +186,19 @@
                                     (<b>{$helpdeskTicketNotAnsweredCount}</b>)
                                 {/if}
                             </a>
+                            <a href="/admin/reports" class="link">{tr("reports")}</a>
+                        {/if}
+                        <a
+                          n:foreach="OPENVK_ROOT_CONF['openvk']['preferences']['menu']['links'] as $menuItem"
+                          href="{$menuItem['url']}"
+                          target="_blank"
+                          class="link">{$menuItem["name"]}</a>
+                        <div id="_groupListPinnedGroups">
+                            <div n:if="$thisUser->getPinnedClubCount() > 0" class="menu_divider"></div>
+                            <a
+                            n:foreach="$thisUser->getPinnedClubs() as $club"
+                            href="{$club->getURL()}"
+                            class="link group_link">{$club->getName()}</a>
                             <a href="/admin/support/reports" class="link" n:if="$canAccessHelpdesk">Reports
                                 {if $reportNotAnsweredCount > 0}
                                     (<b>{$reportNotAnsweredCount}</b>)
