--- a/themepacks/midnight/stylesheet.css
+++ b/themepacks/midnight/stylesheet.css
@@ -12,7 +12,7 @@ body {
 }
 
 span, .post-author .date, .crp-entry--message---text, .messenger-app--messages---message .time, .navigation-lang .link_new {
-    color: #c6d2e8 !important;
+    color: #8b9ab5 !important;
 }
 
 .nobold, nobold {
@@ -28,11 +28,20 @@ span, .post-author .date, .crp-entry--message---text, .messenger-app--messages--
 }
 
 .wrap1, .wrap2, .page-wrap, #wrapH, #wrapHI {
-    border-color: #272e48;
+    border-color: #1c202f;
 }
 
-.accountInfo, .left_small_block, #profile_link, .profile_link, .navigation .link, .navigation .link:hover, .navigation_footer .link, .navigation_footer .link:hover, .completeness-gauge, input[type="text"], input[type="password"], input[type~="text"], input[type~="password"], input[type="email"], input[type="phone"], input[type~="email"], input[type~="phone"], input[type="search"], input[type~="search"], input[type~="date"], select, .content_title_expanded, .content_title_unexpanded, .content_subtitle, textarea, .post-content, .post-author, hr, h4, .postFeedWrapper, .tabs, #wallAttachmentMenu, .ovk-diag, .ovk-diag-head, #ovkDraw, #ovkDraw .literally .lc-picker, .literally .lc-options.horz-toolbar, .page_wrap, .container_gray .content, .summaryBar, .groups_options, form[action="/search"] > input, .header_search_input, .header_search_inputbt, .accent-box, .page_status_popup, .messenger-app--input, .messenger-app, .crp-entry:first-of-type, .crp-list, .crp-entry, .note_footer, .page_content > div, #editor, .note_header, center[style="background: white;border: #DEDEDE solid 1px;"], .album-photo img, .mb_tabs, .mb_tab#active div, .navigation-lang .link_new, #faqhead, #faqcontent, .post-divider, .comment, .commentsTextFieldWrap {
+.accountInfo, .left_small_block, #profile_link, .profile_link, .navigation .link, .navigation .link:hover, .navigation_footer .link, .navigation_footer .link:hover, .completeness-gauge, input[type="text"], input[type="password"], input[type~="text"], input[type~="password"], input[type="email"], input[type="phone"], input[type~="email"], input[type~="phone"], input[type="search"], input[type~="search"], input[type~="date"], select, .content_title_expanded, .content_title_unexpanded, .content_subtitle, textarea, .post-content, .post-author, hr, h4, .postFeedWrapper, .tabs, #wallAttachmentMenu, .ovk-diag, .ovk-diag-head, #ovkDraw, #ovkDraw .literally .lc-picker, .literally .lc-options.horz-toolbar, .page_wrap, .container_gray .content, .summaryBar, .groups_options, form[action="/search"] > input, .header_search_input, .header_search_inputbt, .accent-box, .page_status_popup, .messenger-app--input, .messenger-app, .crp-entry:first-of-type, .crp-list, .crp-entry, .note_footer, .page_content > div, #editor, .note_header, center[style="background: white;border: #DEDEDE solid 1px;"], .album-photo img, .mb_tabs, .mb_tab#active div, .navigation-lang .link_new, #faqhead, #faqcontent, .post-divider, .comment, .commentsTextFieldWrap, tr, td, th, #votesBalance {
     border-color: #2c2640 !important;
+}
+
+hr {
+    background-color: #2c2640 !important;
+}
+
+.cookies-popup {
+    background: linear-gradient(#1e1a2b, #231e33);
+    box-shadow: unset;
 }
 
 .button, #activetabs, .messagebox-content-header, .accent-box, .button_search {
@@ -43,7 +52,7 @@ span, .post-author .date, .crp-entry--message---text, .messenger-app--messages--
     background-color: #40375e;
 }
 
-.menu_divider, .ovk-diag-action {
+.menu_divider, .ovk-diag-action, .minilink .counter {
     background-color: #2c2640;
 }
 
@@ -96,11 +105,11 @@ h4, .content_title_expanded, .summaryBar .summary, .content_title_unexpanded {
     color: #6f82a8;
 }
 
-.content_title_expanded, .content_title_unexpanded, .ovk-diag, .settings_delete, center[style="background: white;border: #DEDEDE solid 1px;"], .album-photo img, #faqhead {
+.content_title_expanded, .content_title_unexpanded, .ovk-diag, .settings_delete, center[style="background: white;border: #DEDEDE solid 1px;"], .album-photo img, #faqhead, td.e, tr.e {
     background-color: #231e33 !important;
 }
 
-.content_subtitle, .post > tbody > tr > td > .post-author, .postFeedWrapper, .ovk-diag-head, .container_gray, .page_status_popup, .messenger-app--input, .note_header, #faqcontent, .commentsTextFieldWrap {
+.content_subtitle, .post-author, .postFeedWrapper, .ovk-diag-head, .container_gray, .page_status_popup, .messenger-app--input, .note_header, #faqcontent, .commentsTextFieldWrap, td.v, tr.v, #votesBalance {
     background-color: #1e1a2b !important;
 }
 
@@ -112,14 +121,24 @@ h4, .content_title_expanded, .summaryBar .summary, .content_title_unexpanded {
     background-color: #120e1f;
 }
 
-#wallAttachmentMenu > .header, .messenger-app--messages---message.unread {
+#wallAttachmentMenu > .header, .messenger-app--messages---message.unread, tr.h {
     background-color: #1d192b;
 }
 
+.toTop {
+    background-color: #272138;
+    color: #c6d2e8;
+}
+
 .page_yellowheader {
-    color: #e4e4e4;
-    background-image: url("/themepack/midnight/0.0.1.0/resource/header_yellow.png");
-    border-color: #655c27;
+    color: #c6d2e8;
+    background-image: url("/themepack/midnight/0.0.1.0/resource/header_purple.png");
+    background-color: #231f34;
+    border-color: #231f34;
+}
+
+.page_header {
+    background-image: url("/themepack/midnight/0.0.1.0/resource/header.png");
 }
 
 .page_custom_header {
@@ -127,7 +146,7 @@ h4, .content_title_expanded, .summaryBar .summary, .content_title_unexpanded {
 }
 
 .page_yellowheader span, .page_yellowheader a {
-    color: #ffed7c;
+    color: #a48aff !important;
 }
 
 .completeness-gauge {
@@ -138,6 +157,14 @@ h4, .content_title_expanded, .summaryBar .summary, .content_title_unexpanded {
     background-color: #2c2640;
 }
 
-form[action="/search"] > input, .header_search_input {
-    background-color: #1e1e2e !important;
+form[action="/search"] > input, .header_search_input, textarea {
+    background-color: #181826 !important;
+}
+
+input[type="checkbox"] {
+    background-image: url("/themepack/midnight/0.0.1.0/resource/checkbox.png");
+}
+
+input[type="radio"] {
+    background-image: url("/themepack/midnight/0.0.1.0/resource/radio.png");
 }
