--- a/themepacks/midnight/stylesheet.css
+++ b/themepacks/midnight/stylesheet.css
@@ -31,7 +31,7 @@ span, .post-author .date, .crp-entry--message---text, .messenger-app--messages--
     border-color: #1c202f;
 }
 
-.accountInfo, .left_small_block, #profile_link, .profile_link, .navigation .link, .navigation .link:hover, .navigation_footer .link, .navigation_footer .link:hover, .completeness-gauge, input[type="text"], input[type="password"], input[type~="text"], input[type~="password"], input[type="email"], input[type="phone"], input[type~="email"], input[type~="phone"], input[type="search"], input[type~="search"], input[type~="date"], select, .content_title_expanded, .content_title_unexpanded, .content_subtitle, textarea, .post-content, .post-author, hr, h4, .postFeedWrapper, .tabs, #wallAttachmentMenu, .ovk-diag, .ovk-diag-head, #ovkDraw, #ovkDraw .literally .lc-picker, .literally .lc-options.horz-toolbar, .page_wrap, .container_gray .content, .summaryBar, .groups_options, form[action="/search"] > input, .header_search_input, .header_search_inputbt, .accent-box, .page_status_popup, .messenger-app--input, .messenger-app, .crp-entry:first-of-type, .crp-list, .crp-entry, .note_footer, .page_content > div, #editor, .note_header, center[style="background: white;border: #DEDEDE solid 1px;"], .album-photo img, .mb_tabs, .mb_tab#active div, .navigation-lang .link_new, #faqhead, #faqcontent, .post-divider, .comment, .commentsTextFieldWrap, tr, td, th, #votesBalance {
+.accountInfo, .left_small_block, #profile_link, .profile_link, .navigation .link, .navigation .link:hover, .navigation_footer .link, .navigation_footer .link:hover, .completeness-gauge, input[type="text"], input[type="password"], input[type~="text"], input[type~="password"], input[type="email"], input[type="phone"], input[type~="email"], input[type~="phone"], input[type="search"], input[type~="search"], input[type~="date"], select, .content_title_expanded, .content_title_unexpanded, .content_subtitle, textarea, .post-content, .post-author, hr, h4, .postFeedWrapper, .tabs, #wallAttachmentMenu, .ovk-diag, .ovk-diag-head, #ovkDraw, #ovkDraw .literally .lc-picker, .literally .lc-options.horz-toolbar, .page_wrap, .container_gray .content, .summaryBar, .groups_options, form[action="/search"] > input, .header_search_input, .header_search_inputbt, .accent-box, .page_status_popup, .messenger-app--input, .messenger-app, .crp-entry:first-of-type, .crp-list, .crp-entry, .note_footer, .page_content > div, #editor, .note_header, center[style="background: white;border: #DEDEDE solid 1px;"], .album-photo img, .mb_tabs, .mb_tab#active div, .navigation-lang .link_new, #faqhead, #faqcontent, .post-divider, .comment, .commentsTextFieldWrap, tr, td, th, #votesBalance, .paginator a.active, .paginator a:hover {
     border-color: #2c2640 !important;
 }
 
@@ -68,7 +68,7 @@ a, .page_footer .link, #profile_link, .profile_link {
     color: #8fb9d8;
 }
 
-.page_footer .link:hover, .navigation .link:hover, .navigation .edit-button:hover, #profile_link:hover, .profile_link:hover, #wallAttachmentMenu > a:hover, .crp-entry:hover, .navigation-lang .link_new:hover {
+.page_footer .link:hover, .navigation .link:hover, .navigation .edit-button:hover, #profile_link:hover, .profile_link:hover, #wallAttachmentMenu > a:hover, .crp-entry:hover, .navigation-lang .link_new:hover, .paginator a:hover, .post-share-button:hover, .post-like-button:hover {
     background-color: #272138 !important;
 }
 
@@ -109,8 +109,21 @@ h4, .content_title_expanded, .summaryBar .summary, .content_title_unexpanded {
     background-color: #231e33 !important;
 }
 
-.content_subtitle, .post-author, .postFeedWrapper, .ovk-diag-head, .container_gray, .page_status_popup, .messenger-app--input, .note_header, #faqcontent, .commentsTextFieldWrap, td.v, tr.v, #votesBalance {
+.content_subtitle, .postFeedWrapper, .ovk-diag-head, .container_gray, .page_status_popup, .messenger-app--input, .note_header, #faqcontent, .commentsTextFieldWrap, td.v, tr.v, #votesBalance {
     background-color: #1e1a2b !important;
+}
+
+.post-author {
+    background-color: #1e1a2b;
+    /* this is fix to correct the unexpected behavior of the microblog style lol */
+}
+
+.content_title_expanded {
+    background-image: url("/themepack/midnight/0.0.1.0/resource/flex_arrow_open.png");
+}
+
+.content_title_unexpanded {
+    background-image: url("/themepack/midnight/0.0.1.0/resource/flex_arrow_shut.gif");
 }
 
 .ovk-video > .preview, .video-preview {
@@ -167,4 +180,24 @@ input[type="checkbox"] {
 
 input[type="radio"] {
     background-image: url("/themepack/midnight/0.0.1.0/resource/radio.png");
+}
+
+.header_navigation .link {
+    background: unset;
+}
+
+.heart {
+    background-image: url("/themepack/midnight/0.0.1.0/resource/like.gif") !important;
+}
+
+.pinned-mark, .post-author .pin {
+    background-image: url("/themepack/midnight/0.0.1.0/resource/pin.png") !important;
+}
+
+.repost-icon {
+    background-image: url("/themepack/midnight/0.0.1.0/resource/published.gif") !important;
+}
+
+.post-author .delete {
+    background-image: url("/themepack/midnight/0.0.1.0/resource/input_clear.gif") !important;
 }
