--- a/themepacks/midnight/stylesheet.css
+++ b/themepacks/midnight/stylesheet.css
@@ -31,7 +31,7 @@ span, .post-author .date, .crp-entry--message---text, .messenger-app--messages--
     border-color: #1c202f;
 }
 
-.accountInfo, .left_small_block, #profile_link, .profile_link, .navigation .link, .navigation .link:hover, .navigation_footer .link, .navigation_footer .link:hover, .completeness-gauge, input[type="text"], input[type="password"], input[type~="text"], input[type~="password"], input[type="email"], input[type="phone"], input[type~="email"], input[type~="phone"], input[type="search"], input[type~="search"], input[type~="date"], select, .content_title_expanded, .content_title_unexpanded, .content_subtitle, textarea, .post-content, .post-author, hr, h4, .postFeedWrapper, .tabs, #wallAttachmentMenu, .ovk-diag, .ovk-diag-head, #ovkDraw, #ovkDraw .literally .lc-picker, .literally .lc-options.horz-toolbar, .page_wrap, .container_gray .content, .summaryBar, .groups_options, form[action="/search"] > input, .header_search_input, .header_search_inputbt, .accent-box, .page_status_popup, .messenger-app--input, .messenger-app, .crp-entry:first-of-type, .crp-list, .crp-entry, .note_footer, .page_content > div, #editor, .note_header, center[style="background: white;border: #DEDEDE solid 1px;"], .album-photo img, .mb_tabs, .mb_tab#active div, .navigation-lang .link_new, #faqhead, #faqcontent, .post-divider, .comment, .commentsTextFieldWrap, tr, td, th, #votesBalance, .paginator a.active, .paginator a:hover {
+.accountInfo, .left_small_block, #profile_link, .profile_link, .navigation .link, .navigation .link:hover, .navigation_footer .link, .navigation_footer .link:hover, .completeness-gauge, input[type="text"], input[type="password"], input[type~="text"], input[type~="password"], input[type="email"], input[type="phone"], input[type~="email"], input[type~="phone"], input[type="search"], input[type~="search"], input[type~="date"], select, .content_title_expanded, .content_title_unexpanded, .content_subtitle, textarea, .post-content, .post-author, hr, h4, .postFeedWrapper, .tabs, #wallAttachmentMenu, .ovk-diag, .ovk-diag-head, #ovkDraw, #ovkDraw .literally .lc-picker, .literally .lc-options.horz-toolbar, .page_wrap, .container_gray .content, .summaryBar, .groups_options, form[action="/search"] > input, .header_search_input, .header_search_inputbt, .accent-box, .page_status_popup, .messenger-app--input, .messenger-app, .crp-entry:first-of-type, .crp-list, .crp-entry, .note_footer, .page_content > div, #editor, .note_header, center[style="background: white;border: #DEDEDE solid 1px;"], .album-photo img, .mb_tabs, .mb_tab#active div, .navigation-lang .link_new, #faqhead, #faqcontent, .post-divider, .comment, .commentsTextFieldWrap, tr, td, th, #votesBalance, .paginator a.active, .paginator a:hover, .topic-list-item, #userContent blockquote {
     border-color: #2c2640 !important;
 }
 
@@ -109,7 +109,7 @@ h4, .content_title_expanded, .summaryBar .summary, .content_title_unexpanded {
     background-color: #231e33 !important;
 }
 
-.content_subtitle, .postFeedWrapper, .ovk-diag-head, .container_gray, .page_status_popup, .messenger-app--input, .note_header, #faqcontent, .commentsTextFieldWrap, td.v, tr.v, #votesBalance {
+.content_subtitle, .postFeedWrapper, .ovk-diag-head, .container_gray, .page_status_popup, .messenger-app--input, .note_header, #faqcontent, .commentsTextFieldWrap, td.v, tr.v, #votesBalance, .expand_button, #userContent blockquote {
     background-color: #1e1a2b !important;
 }
 
@@ -119,11 +119,11 @@ h4, .content_title_expanded, .summaryBar .summary, .content_title_unexpanded {
 }
 
 .content_title_expanded {
-    background-image: url("/themepack/midnight/0.0.1.0/resource/flex_arrow_open.png");
+    background-image: url("/themepack/midnight/0.0.1.1/resource/flex_arrow_open.png");
 }
 
 .content_title_unexpanded {
-    background-image: url("/themepack/midnight/0.0.1.0/resource/flex_arrow_shut.gif");
+    background-image: url("/themepack/midnight/0.0.1.1/resource/flex_arrow_shut.gif");
 }
 
 .ovk-video > .preview, .video-preview {
@@ -145,17 +145,17 @@ h4, .content_title_expanded, .summaryBar .summary, .content_title_unexpanded {
 
 .page_yellowheader {
     color: #c6d2e8;
-    background-image: url("/themepack/midnight/0.0.1.0/resource/header_purple.png");
+    background-image: url("/themepack/midnight/0.0.1.1/resource/header_purple.png");
     background-color: #231f34;
     border-color: #231f34;
 }
 
 .page_header {
-    background-image: url("/themepack/midnight/0.0.1.0/resource/header.png");
+    background-image: url("/themepack/midnight/0.0.1.1/resource/header.png");
 }
 
 .page_custom_header {
-    background-image: url("/themepack/midnight/0.0.1.0/resource/header_custom.png");
+    background-image: url("/themepack/midnight/0.0.1.1/resource/header_custom.png");
 }
 
 .page_yellowheader span, .page_yellowheader a {
@@ -170,16 +170,16 @@ h4, .content_title_expanded, .summaryBar .summary, .content_title_unexpanded {
     background-color: #2c2640;
 }
 
-form[action="/search"] > input, .header_search_input, textarea {
+form[action="/search"] > input, .header_search_input, textarea, input[type="text"] {
     background-color: #181826 !important;
 }
 
 input[type="checkbox"] {
-    background-image: url("/themepack/midnight/0.0.1.0/resource/checkbox.png");
+    background-image: url("/themepack/midnight/0.0.1.1/resource/checkbox.png");
 }
 
 input[type="radio"] {
-    background-image: url("/themepack/midnight/0.0.1.0/resource/radio.png");
+    background-image: url("/themepack/midnight/0.0.1.1/resource/radio.png");
 }
 
 .header_navigation .link {
@@ -187,17 +187,23 @@ input[type="radio"] {
 }
 
 .heart {
-    background-image: url("/themepack/midnight/0.0.1.0/resource/like.gif") !important;
+    background-image: url("/themepack/midnight/0.0.1.1/resource/like.gif") !important;
 }
 
 .pinned-mark, .post-author .pin {
-    background-image: url("/themepack/midnight/0.0.1.0/resource/pin.png") !important;
+    background-image: url("/themepack/midnight/0.0.1.1/resource/pin.png") !important;
 }
 
 .repost-icon {
-    background-image: url("/themepack/midnight/0.0.1.0/resource/published.gif") !important;
+    background-image: url("/themepack/midnight/0.0.1.1/resource/published.gif") !important;
 }
 
 .post-author .delete {
-    background-image: url("/themepack/midnight/0.0.1.0/resource/input_clear.gif") !important;
+    background-image: url("/themepack/midnight/0.0.1.1/resource/input_clear.gif") !important;
+}
+
+.user-alert {
+    background-color: #41311a;
+    color: #d5b88c;
+    border-color: #514534;
 }
