--- a/Web/Presenters/templates/@layout.xml
+++ b/Web/Presenters/templates/@layout.xml
@@ -29,58 +29,7 @@
             {script "js/timezone.js"}
         {/if}
 
-        {ifset $thisUser}
-            {if $thisUser->getNsfwTolerance() < 2}
-                {css "css/nsfw-posts.css"}
-            {/if}
-
-            {if $theme !== NULL}
-                {if $theme->inheritDefault()}
-                    {css "css/style.css"}
-                    {css "css/dialog.css"}
-                    {css "css/notifications.css"}
-                    
-                    {if $isXmas}
-                        {css "css/xmas.css"}
-                    {/if}
-                {/if}
-
-                <link rel="stylesheet" href="/themepack/{$theme->getId()}/{$theme->getVersion()}/stylesheet/styles.css" />
-                
-                {if $isXmas}
-                    <link rel="stylesheet" href="/themepack/{$theme->getId()}/{$theme->getVersion()}/resource/xmas.css" />
-                {/if}
-            {else}
-                {css "css/style.css"}
-                {css "css/dialog.css"}
-                {css "css/notifications.css"}
-                
-                {if $isXmas}
-                    {css "css/xmas.css"}
-                {/if}
-            {/if}
-
-            {if $thisUser->getStyleAvatar() == 1}
-                {css "css/avatar.1.css"}
-            {/if}
-            
-            {if $thisUser->getStyleAvatar() == 2}
-                {css "css/avatar.2.css"}
-            {/if}
-
-            {if $thisUser->hasMicroblogEnabled() == 1}
-                {css "css/microblog.css"}
-            {/if}
-        {else}
-            {css "css/style.css"}
-            {css "css/dialog.css"}
-            {css "css/nsfw-posts.css"}
-            {css "css/notifications.css"}
-
-            {if $isXmas}
-                {css "css/xmas.css"}
-            {/if}
-        {/ifset}
+        {include "_includeCSS.xml"}
 
         {ifset headIncludes}
             {include headIncludes}
@@ -334,6 +283,7 @@
         {script "js/al_wall.js"}
         {script "js/al_api.js"}
         {script "js/al_mentions.js"}
+        {script "js/al_polls.js"}
 
         {ifset $thisUser}
             {script "js/al_notifs.js"}
